fix(avatars): fix camera aspect ratio distortion

--- a/app/styles/modules/_avatar.scss
+++ b/app/styles/modules/_avatar.scss
@@ -54,11 +54,6 @@
       background-size: cover;
     }
   }
-
-  .avatar-camera-wrapper {
-    border-radius: 50%;
-    position: relative;
-  }
 }
 
 .with-default {
